# linux-learning

./: CURR_STATE  Prog1-BaoCao-Hoang.docx  checketc.sh  hello  hoang@192.168.170.130  info.sh  sample  sshmonitor.sh
prog1/: bin_search.py  sample.c
prog2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  myid  myid.cpp  mypasswd  mypasswd.cpp
prog3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sshtrace2.c  sshtrojan1.c  sshtrojan2
prog4/: httpdownload.py  httpget.py  httppost.py  httpupload.py
prog4/server/: .env  docker-compose.yml  setup.sh  uploads.ini
prog5/: Dockerfile  dockercompose.yml  init.sql
prog5/server/: autoload.php
prog5/server/config/: config.php  db.php  routes.php
prog5/server/includes/: auth.php  header.php  nav.php
prog5/server/public/: .htaccess  assignments.php  dashboard.php  index.php  login.php  logout.php  profile-edit.php  students-manage.php  submissions.php  user-detail.php  user-profile.php  users.php
prog5/server/public/uploads/: .htaccess
prog5/server/src/: auth.php  seed.php
prog5/server/src/Controllers/: AssignmentController.php  AuthController.php  HomeController.php  MessageController.php  MinigameController.php  UserController.php
prog5/server/src/Core/: Auth.php  Csrf.php  Database.php  Request.php  Response.php  Router.php  View.php
prog5/server/src/Middleware/: AuthMiddleware.php
prog5/server/views/: login.view.php
prog6/: package-lock.json
prog6/class-manager/: composer.json  package-lock.json
prog6/class-manager/config/: fortify.php
(+25 files in other folders)
